@@ -1,4 +1,10 @@
 4.0.117
+- Reminders were not synced with Outlook
+- Links were not clickable from e-mail portlet
+- Conflicting events check didn't work with busy flag and repeating events
+- SMTP password wasn't updated on LDAP login
+- Shared folders could appear twice in the shares tree
+- Create folder permission check failed if a parent folder didn't exist
 - Added Incomplete filter to the tasks list
 - Links in emailwindow on startpage open in new browser tab.
 - Unset invalid attributes while using importVObject function in Contact model.
